fix: layout alignment

--- a/src/app/routes/viewer/config-viewer/config-viewer.component.scss
+++ b/src/app/routes/viewer/config-viewer/config-viewer.component.scss
@@ -1,3 +1,7 @@
+.viewer-container {
+  margin: 0 20px;
+}
+
 .viewer {
   margin: 20px 10px;
 }
